--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -13,6 +13,7 @@ bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, R, exec, rofi -show drun # Open rofi
 bind = $mainMod, S, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod ALT,  L,  exec, grim -g "$(slurp -d)" - | wl-copy 
 bind = $mainMod SHIFT, T, exec, telegram-desktop
 bind = $mainMod SHIFT, D, exec, flatpak run dev.vencord.Vesktop
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Opens the browser
