--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -7,7 +7,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, alacritty# Open Alactritty
 bind = $mainMod, W, killactive # Close current window
 bind = $mainMod, M, exit # Exit Hyprland
-bind = $mainMod, E, exec, nautilus# Opens the filemanager
+bind = $mainMod, E, exec, nemo# Opens the filemanager
 bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, R, exec, rofi -show drun # Open rofi
