--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -4,6 +4,7 @@ exec-once = hyprpaper
 exec-once = dunst
 exec-once = alacritty -T binds -e vim ~/.config/hypr/conf/binds.conf &
 exec-once = alacritty -T style -e vim ~/.config/waybar/style.css &
+exec-once = alacritty -T main 
 exec-once = hyprctl dispatch movewindow 4
 exec-once = telegram-desktop
 exec-once = flatpak run dev.vencord.Vesktop
