--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -1,4 +1,6 @@
 windowrule = workspace 5 silent, title:binds
 windowrule = workspace 5 silent, title:style
+windowrule = workspace 4 silent, title:main
+windowrule = workspace 6 silent, title:steam
 windowrule = workspace 2,float, pin yes, class:vesktop
 windowrule = workspace 3,float, pin yes, class:org.telegram.desktop
