--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -8,15 +8,14 @@ bind = $mainMod, Q, exec, alacritty# Open Alactritty
 bind = $mainMod, W, killactive # Close current window
 bind = $mainMod, M, exit # Exit Hyprland
 bind = $mainMod, E, exec, nemo# Opens the filemanager
-bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
+bind = $mainMod, S, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
-bind = $mainMod, R, exec, rofi -show drun # Open rofi
-bind = $mainMod, S, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod ALT,  L,  exec, grim -g "$(slurp -d)" - | wl-copy 
+bind = $mainMod, R, exec, rofi -show drun# Open application
+bind = $mainMod ALT,   L,  exec, grim -g "$(slurp -d)" - | wl-copy 
 bind = $mainMod SHIFT, T, exec, telegram-desktop
+bind = $mainMod SHIFT, S, exec, [workspace 6 silent: move 0 0] steam
 bind = $mainMod SHIFT, D, exec, flatpak run dev.vencord.Vesktop
-bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Opens the browser
+bind = $mainMod, B, exec, [workspace 1 silent; move 0 0] ~/.config/ml4w/settings/browser.sh # Opens the browser
 bind = $mainMod SHIFT, B, exec, ~/.config/ml4w/scripts/reload-waybar.sh # Reload Waybar
 bind = $mainMod SHIFT, W, exec, ~/.config/ml4w/scripts/reload-hyprpaper.sh # Reload hyprpaper after a changing the wallpaper
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
