--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -4,9 +4,11 @@ exec-once = hyprpaper
 exec-once = dunst
 exec-once = alacritty -T binds -e vim ~/.config/hypr/conf/binds.conf &
 exec-once = alacritty -T style -e vim ~/.config/waybar/style.css &
-exec-once = alacritty -T main 
+exec-once = alacritty -T conf -e vim ~/.config/hypr/
+exec-once = alacritty -T main
 exec-once = hyprctl dispatch movewindow 4
 exec-once = telegram-desktop
 exec-once = flatpak run dev.vencord.Vesktop
+exec-once = steam
 # Load configuration from ML4W Hyprland Settings App
 exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
